Finalized Student Dashboard